# ci

./: Cargo.toml  dagger.json  deploy-ci.sh  go.mod  main.go  setup-dev-server.sh
.claude/hooks/: pre-commit  prepare-commit-msg  setup.sh
ci_pipeline/: Cargo.toml
ci_pipeline/src/stages/: check.rs  lint.rs  mod.rs  module_lint.rs  security.rs  test.rs
ci_server/: Cargo.toml
ci_server/src/: ci_module.rs  config.rs  main.rs  metrics.rs  schema.rs  seeder.rs
ci_server/src/dashboard/: kpi.rs  mod.rs
ci_server/src/events/: build.rs  environment.rs  mod.rs
ci_server/src/handlers/: mod.rs
ci_server/src/models/: artifact.rs  build.rs  build_step.rs  environment.rs  error.rs  mod.rs  project.rs  trigger.rs
ci_server/src/routes/: api.rs  mod.rs  webhook.rs  websocket.rs
ci_server/src/services/: artifact_service.rs  build_service.rs  environment_service.rs  error_service.rs  executor.rs  github_service.rs  mod.rs  project_service.rs  step_executor.rs
src/: containers.rs  main.rs
src/stages/: deploy.rs  fmt.rs  integration.rs  tailwind.rs
