[workspace]
resolver = "2"
members = [
    "ci_pipeline",
    "ci_server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Centrix Systems"]
license = "LGPL-3.0"
repository = "https://github.com/centrixsystems/ci"

[workspace.lints.clippy]
get_first = "allow"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
