[package]
name = "centrix-ci-pipeline"
version.workspace = true
edition.workspace = true
publish = false
description = "Dagger CI/CD pipeline runner for the Centrix framework"

[[bin]]
name = "centrix-ci-pipeline"
path = "src/main.rs"

[dependencies]
dagger-sdk = "0.19"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
eyre = "0.6"
color-eyre = "0.6"
