[package]
name = "centrix-ci-server"
version.workspace = true
edition.workspace = true
description = "Generic CI management platform built on the Centrix framework"

[[bin]]
name = "centrix-ci"
path = "src/main.rs"

[dependencies]
# Centrix framework (git dependency)
erp_core = { git = "https://github.com/centrixsystems/centrix.git", branch = "development", features = ["mail"] }
erp_web = { git = "https://github.com/centrixsystems/centrix.git", branch = "development" }
erp_migration = { git = "https://github.com/centrixsystems/centrix.git", branch = "development" }
erp_dbos = { git = "https://github.com/centrixsystems/centrix.git", branch = "development" }
erp_bus = { git = "https://github.com/centrixsystems/centrix.git", branch = "development" }
erp_base = { git = "https://github.com/centrixsystems/centrix.git", branch = "development" }
erp_mail = { git = "https://github.com/centrixsystems/centrix.git", branch = "development" }

# Web framework
axum = { version = "0.8", features = ["macros", "ws"] }
tokio = { version = "1.43", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "trace", "timeout", "fs", "set-header"] }

# Database
diesel = { version = "2.3", features = ["postgres", "serde_json", "uuid", "chrono", "numeric"] }
diesel-async = { version = "0.7", features = ["postgres", "deadpool"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Security (HMAC for webhook validation)
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# HTTP client (GitHub API)
reqwest = { version = "0.12", features = ["json"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# Error parsing
regex = "1.11"

# Utilities
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
thiserror = "2.0"
uuid = { version = "1.11", features = ["v4", "serde"] }
clap = { version = "4.5", features = ["derive", "env"] }

# Process management
libc = "0.2"

[lints]
workspace = true
